# yt2shorts

./: .env  .gitignore  =3.0.0  README.md  SHORTS_README.md  app.py  beast_gen.py  condaenv.n90pnx4p.requirements.txt  condaenv.urs0q9up.requirements.txt  create_short.py  create_short_v2.py  download_models.py  environment.yml  get_keywords.py  main.py  make_shorts.py  ml_highlight_detect.py  pyproject.toml  requirements-core.txt  requirements.txt  safe_highlight_detect.py  shorts_maker.py  transcription.py  v2.py
.transcription_cache/: 1540cfc01deae332ceaceb87c7ac812e_base.pkl  2a6234b6bfbb3d7360f3a72002925633_base.pkl  32bd6e2ffe3cf58e33dbf7f3413b2249_base.pkl  374790be6a664d568a34ecd4c0322988_base.pkl  528d7bb9a6865862f7d7704c44d19c36_base.pkl  58b6f8cf98a4dc05665a2334762987d8_base.pkl  7c523a86d52fbeaa51c2635b6067e84b_base.pkl  96f0ad3b78d91ab033e0b4ffd85b28e5_base.pkl  98d7c4e74d42060ad14337f10767ca32_base.pkl  d207b0d9def82f3bea95b0d19fc328c5_base.pkl  ea9d5bd7b5d188e4f82306518c287384_base.pkl  f3c408bb68bee8a8bff725aec1efed9d_base.pkl
src/: clip_assembler.py  config.py  downloader.py  pipeline.py  speech_to_text.py  video_processor.py  virality_scorer.py  visual_analysis.py
src/video_edition/: README.md  __init__.py  config.py  examples.py  main.py  main_simple.py  moviepy_editor.py  run_editor.py  shorts_editor.py  simple_captions.py  simple_editor.py  test_editor.py
